@@ -29,6 +29,14 @@
 #   define EXPF_DISABLED  (1)
 #endif
 
+#if defined(__SDCC_stm8)
+#   define ASINF_DISABLED  (1)
+#   define ATANF_DISABLED  (1)
+#   define FLOORF_DISABLED  (1)
+#   define NEG_DISABLED  (1)
+#   define SINHF_DISABLED  (1)
+#endif
+
 static float
 dummy (float a)
 {
