@@ -47,7 +47,7 @@ foo (void)
 void
 testTortureExecute (void)
 {
-#ifndef __SDCC_mcs51
+#if !defined(__SDCC_mcs51) && !defined(__SDCC_stm8)
   foo ();
   return;
 #endif
